  then we select on the mysql.proc table directly as this is up to 50x faster than our current
  IS implementation.  If 'use procedure bodies=false', then the IS collection is queried.
  (bug #36694)
- Fixed problem with our GetOrdinal speedup where we would attempt to add an already existing
  key to a hash when a resultset had more than 1 column with the same name. (bug #37239)    
    
Version 5.2.2 - 
- Fixed profile provider that would throw an exception if you were updating
  a profile that already existed.
- Fixed problem where new parameter code prevented stored procedures from being
  altered in Visual Studio (bug #34940)
- Fixed problem where the TableAdapter wizard was no longer able to generate commands
  using stored procedures because of our change to using @ instead of ? (bug #34941)
- Fixed problem in datagrid code related to creating a new table.  This problem may
  have been introduced with .NET 2.0 SP1.   
- Fixed guid type so that a null value is still returned as guid type (bug #35041)
- Added support for using the new PARAMETERS I_S view when running against
  a 6.0 server    
- Fixed bug with the membership provider where the min non alpha numeric option
  was not working correctly.    
- Fixed bug where calling GetPassword on a membership user when the password answer
  is null would cause an exception (bug #35332)
- Fixed bug where retrieving passwords that are encrypted was not returning proper
  passwords (bug #35336)    
- Fixed problem with profile provider where properties that were specified without
  a given type could not be retrieved properly (bug #36000)  
- Implemented interactive session connection string option     
- The procedure parameters schema collection has been altered to match what is coming
  with MySQL 6.0.  Some fields have been removed and others combined.  Please review
  your application for incompatibilities.
- Removed some unnecessary locking from the pool manager and also reworked the pooling